# deai

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
deai/: __init__.py  __main__.py  ai_humanizer.py  cli.py  git_forger.py  humanizer.py  styles.py
deai/languages/: __init__.py  python.py
examples/: sample_ai.py
tests/: test_adversarial.py  test_git_forger.py  test_humanizer.py  test_python.py  test_styles.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  humanize.ts
web/: app.py
web/templates/: index.html
