[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deai"
version = "0.1.0"
description = "Style anonymizer for AI-generated code. Pass software copyright AI detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anonymous Developer", email = "anon@example.com"},
]
keywords = ["ai", "code", "obfuscation", "humanize", "copyright", "detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.scripts]
deai = "deai.cli:main"

[project.urls]
Homepage = "https://github.com/zll/deai"
Issues = "https://github.com/zll/deai/issues"
